# spark-utils

./: .bumpversion.cfg  LICENSE  Makefile  README.md  config.ini  environment.yml  environment_dev.yml  make.cmd  pyproject.toml
.github/workflows/: make-docs.yml
arcgis/: spark-utils.aprx
conda-recipe/: meta.yaml
docsrc/: api.rst  conf.py  index.rst  setup.rst
docsrc/notebooks/: get-spark-session.ipynb  notebook-template.ipynb
notebooks/: get-spark-session.ipynb
scripts/: make_data.py
src/spark_utils/: __init__.py
testing/: test_spark_utils.py
